--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel index.html",
-    "test": "playwright test"
+    "start": "http-server -c-1 --silent -p 1234",
+    "test": "playwright test",
+    "ci": "start-server-and-test 1234"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@playwright/test": "^1.25.0",
-    "parcel": "^2.7.0",
+    "@types/ws": "^8.5.3",
+    "http-server": "^14.1.1",
+    "start-server-and-test": "^1.14.0",
     "typescript": "^4.7.4",
-    "ws": "^8.8.1",
-    "@types/ws": "^8.5.3"
+    "ws": "^8.8.1"
   }
 }
